[package]
authors = ['Kylin <https://github.com/kylin-network>']
build = 'build.rs'
description = ''
edition = '2018'
homepage = 'https://kylin.network'
license = 'Apache 2.0'
name = 'kylin-collator'
repository = 'https://github.com/kylin-network/kylin-collator/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'kylin-collator'

[features]
default = []
runtime-benchmarks = [
    'polkadot-service/runtime-benchmarks',
	'pichiu-runtime/runtime-benchmarks',
	'development-runtime/runtime-benchmarks',
]

[dependencies]
derive_more = "0.99.17"
exit-future = "0.2.0"
futures = { version = "0.3.21", features = ["compat"] }
log = "0.4.16"
parking_lot = "0.12.0"
trie-root = "0.17.0"
codec = { package = "parity-scale-codec", version = "3.1.2" }
serde = { version = "1.0.136", features = ["derive"] }
hex-literal = "0.3.4"
async-trait = "0.1.53"
clap = { version = "3.1", features = ["derive"] }
thiserror = "1.0.30"
jsonrpsee = { version = "0.14.0", features = ["server"] }

# Parachain runtimes
development-runtime = { path = '../runtime/development' }
pichiu-runtime = { path = '../runtime/pichiu' }
kylin-runtime = { path = '../runtime/kylin' }
runtime-common = { path = '../runtime/common' }
shell-runtime  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

kylin-democracy = { package = 'kylin-democracy', path = '../pallets/kylin-democracy', default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25" }
# RPC related dependencies
jsonrpc-core = "18.0.0"
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Cumulus dependencies

cumulus-client-cli  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
parachains-common  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }

# Polkadot dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = "0.25.0"
rand = "0.8.5"
tempfile = "3.2.0"
tokio = { version = "1.10.0", features = ["macros"] }


