[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '4.0.0' }

[package]
authors = ['Kylin <https://github.com/kylin-network>']
edition = '2018'
homepage = 'https://kylin.network'
license = 'Apache 2.0'
name = 'kylin-node-runtime'
repository = 'https://github.com/kylin-network/kylin-node/'
version = '2.0.0'

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }



[dependencies]
codec= { package = 'parity-scale-codec', default-features = false, features = ['derive'], version = '2.0.0' }

smallvec = {  version = '1.6.1' }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, optional = true, version = '3.0.0' }
frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
hex-literal = {  optional = true, version = '0.3.1'  }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-contracts = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-contracts-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-contracts-rpc-runtime-api   = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }

serde = {  optional = true, version = '1.0.119' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '0.9.0' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }

# Cumulus dependencies
parachain-info = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1', default-features = false, version = '0.1.0' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1', default-features = false }


# Polkadot dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot.git', branch = 'rococo-v1', default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot.git', branch = 'rococo-v1', default-features = false }
xcm-builder = { git = 'https://github.com/paritytech/polkadot.git', branch = 'rococo-v1', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot.git', branch = 'rococo-v1', default-features = false }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot.git', branch = 'rococo-v1', default-features = false }
kylin-oracle = { package = 'kylin-oracle', path = '../pallets/kylin-oracle', default-features = false }


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'hex-literal',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'kylin-oracle/runtime-benchmarks',
]
std = [
	'codec/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-transaction-payment/std',
	'pallet-contracts/std',
	'parachain-info/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-primitives-core/std',
	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-utility/std',
	'kylin-oracle/std',
]
