[package]
authors = ['Kylin <https://github.com/kylin-network>']
edition = '2018'
homepage = 'https://kylin.network'
license = 'Apache 2.0'
name = 'kylin-collator-runtime'
repository = 'https://github.com/kylin-network/kylin-collator/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
# Local Dependencies
kylin-oracle = { package = 'kylin-oracle', path = '../pallets/kylin-oracle', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }

## Substrate FRAME Dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-pallet-dmp-queue  = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }
parachain-info = { git = 'https://github.com/Kylin-Network/cumulus', branch = 'upgrade_tokio', default-features = false }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.3"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'kylin-oracle/runtime-benchmarks',
]
std = [
	'codec/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-core/std',
	'sp-consensus-aura/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	"pallet-aura/std",
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-transaction-payment/std',
	'parachain-info/std',
	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-dmp-queue/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-primitives-core/std',
	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-utility/std',
	'kylin-oracle/std',
]

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]
