[package]
name = "common-traits"
authors = ['Kylin <https://github.com/kylin-network>']
edition = '2018'
homepage = 'https://kylin.network'
license = "LGPL-3.0"
repository = 'https://github.com/Kylin-Network/kylin-collator'
version = '0.1.0'
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false , }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false , }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false , }

[features]
default = ['std']
std = [
    "codec/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std"
]
